<resources>
    <string name="app_name">UIComponentTugas</string>
    <string name="pendaftaran_karang_taruna">Pendaftaran Karang Taruna</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="divisi_yg_dituju">Divisi yg dituju</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="kesekretariatan">Kesekretariatan</string>
    <string name="humas">Humas</string>
    <string name="event">Event</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
</resources>